--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-sass": "^4.13.1",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^3.9.0",
+    "react-tooltip": "^4.1.2",
     "request": "^2.88.2"
   },
   "devDependencies": {
