--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.5",
     "node-sass": "^4.13.1",
+    "react-dropdown-select": "^4.3.1",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^3.9.0",
     "react-tooltip": "^4.1.2",
