--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "gravatar": "^1.8.0",
@@ -33,6 +34,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.5",
     "node-sass": "^4.13.1",
+    "nodemailer": "^6.4.6",
     "react-dropdown-select": "^4.3.1",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^3.9.0",
