--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/react-fontawesome": "^0.1.9",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.0",
+    "email-verifier": "^0.4.1",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
