--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "gravatar": "^1.8.0",
     "i": "^0.3.6",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.25.2",
     "mongoose": "^5.9.5",
     "node-sass": "^4.13.1",
     "nodemailer": "^6.4.6",
     "react-dropdown-select": "^4.3.1",
     "react-fontawesome": "^1.7.1",
     "react-icons": "^3.9.0",
+    "react-moment": "^0.9.7",
     "react-tooltip": "^4.1.2",
     "request": "^2.88.2"
   },
